# weilink

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  README_en.md  README_zh.md  mkdocs.yml  pyproject.toml  requirements.txt  server.json  smithery.yaml
.github/workflows/: ci.yml  docker-publish.yml  update-badge.yml
docker/: Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh
docs/: architecture.md  changelog.md  index.md
docs/api/: client.md  models.md  session.md
docs/examples/: callback_echo.md  echo_bot.md  media_echo.md  multi_echo.md  proactive.md  simple_echo.md
docs/usage/: admin.md  cli.md  concepts.md  docker.md  gotchas.md  installation.md  mcp.md  multi_session.md  openapi.md  quickstart.md  setup.md
examples/: callback_echo.py  echo_bot.py  media_download.py  media_echo.py  media_upload.py  multi_echo.py  simple_echo.py  test_proactive_media.py  test_proactive_send.py
overrides/partials/: alternate.html
pyilink/: pyproject.toml
src/weilink/: __init__.py  _aes_openssl.py  _banner.py  _cdn.py  _crypto.py  _filelock.py  _helpers.py  _hook.py  _protocol.py  _qr.py  _setup.py  _store.py  cli.py  client.py  filelock.py  migrate.py  models.py
src/weilink/_cli/: __init__.py  _hook.py  _setup.py
src/weilink/_crypto/: __init__.py  _aes.py
src/weilink/_vendor/: __init__.py  aes.py  aes_openssl.py  filelock.py  qr.py
src/weilink/admin/: __init__.py  __main__.py  admin.html  handlers.py  server.py  static.py
src/weilink/admin/locales/: en.json  zh.json
src/weilink/integrations/claude_code/: .mcp.json
src/weilink/integrations/claude_code/.claude-plugin/: plugin.json
src/weilink/integrations/claude_code/hooks/: hooks.json
src/weilink/integrations/claude_code/skills/weilink/: SKILL.md
src/weilink/integrations/codex/: hooks.json
src/weilink/integrations/codex/commands/: weilink.md
src/weilink/integrations/codex/hooks/: poll_inject.py
src/weilink/integrations/opencode/commands/: weilink.md
src/weilink/mcp/: __init__.py  __main__.py  server.py
src/weilink/server/: __init__.py  __main__.py  app.py
tests/: test_admin.py  test_aes_h2h.py  test_cdn.py  test_cli.py  test_client.py  test_cross_process.py  test_filelock.py  test_helpers.py  test_migrate.py  test_models.py  test_protocol.py  test_server.py  test_store.py  test_store_watcher.py
