[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyilink"
version = "0.0.0"
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "Alias package for weilink - Lightweight Python SDK for WeChat iLink Bot protocol"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["weilink==0.0.0"]

[project.urls]
Repository = "https://github.com/Oaklight/weilink"
